# reversi-ai-project

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  PROJECT_SETUP_SUMMARY.md  README.md  READY_TO_PUSH.md  REVERSI_RULES.md  TODO.md  build.bat  build_cmake.bat  build_cmake_debug.bat  build_test_week5.bat  build_week3.ps1  build_week4.bat  build_week4.ps1  clean.bat  compile_ai_demo.bat  compile_ui_app.bat  compile_week3.bat  copy_dlls.bat  direct_compile.bat  fix_dll_compatibility.bat  git_push_week6.bat  push_to_github.bat  quick_compile.bat  setup_fonts.bat
.github/workflows/: package.yml
build_mingw/: .ninja_deps  .ninja_log  build.ninja
build_mingw/Testing/Temporary/: CTestCostData.txt
build_release/: .ninja_deps  .ninja_log  build.ninja  install_manifest.txt
docs/: 01_Overview.md  02_Build_and_Dev.md  03_Packaging_and_Release.md  CHANGELOG.md  week10_benchmark_implementation_notes.md  week11_ca2_documentation_notes.md  week1_bitboard_notes.md  week2_testing_optimization_notes.md  week3_minimax_ai_notes.md  week4_advanced_evaluation_notes.md  week5_transposition_notes.md  week6_advanced_search_notes.md  week7_sfml_ui_notes.md  week8_network_multiplayer_notes.md  week9_mcts_implementation_notes.md
docs/notes/: Bitboard_Day1.md
project_docs/: AI_COLLABORATION_RULES.md  DOCUMENT_CLEANUP_ANALYSIS.md  GITHUB_PUSH_SUMMARY.md  GIT_WORKFLOW.md  PROJECT_PLAN.md  README.md  TECHNICAL_ISSUES_SOLUTIONS.md  WEEK7_FINAL_ASSESSMENT.md  WEEK7_REVIEW_REPORT.md  WEEK8_FINAL_ASSESSMENT.md  WEEK9_IMPLEMENTATION_CHECKLIST.md  WEEK9_SUBMISSION_READINESS.md  upload_docs_to_github.bat
project_docs/github/: BUILD_AND_RUN.md  GETTING_STARTED.md  PROJECT_SETUP_SUMMARY.md  QUICK_REFERENCE.md  README.md
scripts/: build_mingw.bat  build_release.bat  build_release.sh  clean_dist.bat  clean_dist.sh
src/: ai_demo.cpp  bench_week3.cpp  main.cpp  main_ui.cpp
src/ai/: AIStrategy.hpp  Evaluator.cpp  Evaluator.hpp  Evaluator_Week4.cpp  Evaluator_Week4.hpp  MCTSEngine.cpp  MCTSEngine.hpp  MinimaxEngine.cpp  MinimaxEngine.hpp  PhaseWeights.hpp  StabilityAnalyzer.cpp  StabilityAnalyzer.hpp  TranspositionTable.cpp  TranspositionTable.hpp
src/core/: Board.cpp  Board.hpp  Move.cpp  Move.hpp
src/network/: NetworkGame.cpp  NetworkGame.hpp  NetworkMessage.hpp  NetworkProtocol.cpp  NetworkProtocol.hpp  RoomManager.cpp  RoomManager.hpp  TCPSocket.cpp  TCPSocket.hpp
src/research/: difficulty_test.cpp  minimax_vs_mcts.cpp  self_play.cpp
src/research/benchmark/: Benchmark.cpp  Benchmark.hpp  MatchEngine.cpp  MatchEngine.hpp  PositionSuite.cpp  PositionSuite.hpp  Statistics.cpp  Statistics.hpp
src/ui/: AnimationSystem.cpp  AnimationSystem.hpp  BoardRenderer.cpp  BoardRenderer.hpp  EventHandler.cpp  EventHandler.hpp  GameState.cpp  GameState.hpp  GameUI.cpp  GameUI.hpp  MenuSystem.cpp  MenuSystem.hpp  NetworkLobbyState.cpp  NetworkLobbyState.hpp  UIComponent.cpp  UIComponent.hpp  UIStyle.cpp  UIStyle.hpp
tests/: bench_micro.cpp  bench_week4.cpp  bench_week6.cpp  benchmark.cpp  compile_tests.bat  diag_combined.cpp  opt_matrix.cpp  param_opt.cpp  param_random.cpp  param_search.cpp  quick_self_play.cpp  simple_test.cpp  stepwise_rollout.cpp  test_benchmark_week10.cpp  test_hash.cpp  test_legal_moves.cpp  test_mcts.cpp  test_minimax.cpp  test_network.cpp  test_stability.cpp  test_transposition.cpp  test_undo.cpp  test_utils.hpp  test_week6.cpp  test_week8_improvements.cpp
